--- a/rootdir/etc/init.g3.rc
+++ b/rootdir/etc/init.g3.rc
@@ -356,7 +356,7 @@ on property:vold.decrypt=trigger_restart_framework
 service hwaddrs /system/bin/hwaddrs
     class core
     user root
-    group system
+    group bluetooth wifi
     oneshot
 
 service btinit-sh /system/bin/sh /init.qcom.bt.sh
@@ -412,7 +412,7 @@ service qseecomd /system/bin/qseecomd
 service mpdecision /system/bin/mpdecision --avg_comp
     class main
     user root
-    group system
+    group system readproc
     disabled
 
 service thermal-engine /system/vendor/bin/thermal-engine
